Made font scaling update on active tab immediately.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Dota Tooltips",
-  "version": "0.0.1",
+  "version": "0.0.1.2",
   "description": "Popup text for Dota 2 related keywords.",
   "author": "github.com/dgkf",
   "icons": {
@@ -10,7 +10,9 @@
 
   "permissions": [
     "storage",
-    "https://*.dota2.com/*"
+    "activeTab",
+    "https://*.dota2.com/*",
+    "http://*.dota2.com/*"
   ],
 
   "browser_action": {
@@ -25,7 +27,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["ext/js/jquery-3.1.0.min.js", "js/add_tooltips.js"],
+      "js": ["ext/js/jquery-3.1.0.min.js", "js/add_tooltips.js", "js/update_tab_settings.js"],
       "css": ["css/style_custom.css"],
       "run_at": "document_end"
     }
