Tried fiddling with the content source permissions to allow it to load http images, but realized it doesn't govern content scripts. I think the only change since last commit is subtle formatting stuff.

--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,7 @@
 
   "permissions": [
     "storage",
-    "activeTab",
-    "https://*.dota2.com/*",
-    "http://*.dota2.com/*"
+    "activeTab"
   ],
 
   "browser_action": {
